Added search button

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 class="form-control"
               />
               <input type="submit" value="Go" class="form-control"/>
+              <button class="btn btn-success w-100" id="current-location-button">
+                Current
+              </button>
             </form>
           </div>
         </div>
