--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <form class="search-form" id="search-form">
           <div class="row pt-2 pb-4 col-12 d-flex justify-content-center">
-            <div class="col-5">
+            <div class="col-md-5">
               <input
                 type="search"
                 placeholder="Type a city.."
@@ -40,14 +40,14 @@
                 class="form-control btn-light shadow-sm"
               />
             </div>
-            <div class="col-2">
+            <div class="col-md-2">
               <input
                 type="submit"
                 value="Search"
                 class="form-control btn btn-light shadow-sm w-100"
               />
             </div>
-            <div class="col-2">
+            <div class="col-md-2">
               <button class="btn btn-light w-100" id="current-location-button">
                 Current
               </button>
