--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="col-md-2">
               <button class="btn btn-light w-100" id="current-location-button">
-                Current
+                My location
               </button>
             </div>
           </div>
