Added last section to index

--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
         <br />
         <div class="row weather-forecast" id="forecast"></div>
         <br />
+        <a href="https://github.com/KittyN1/Weather-App">Open-source code</a> by
+        Sky
       </div>
     </div>
+
     <script src="src/index.js"></script>
   </body>
 </html>
